<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <include layout="@layout/toolbar"/>

    <include layout="@layout/no_network_layout"/>

    <android.support.constraint.Group
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="openingText, fromText, fromCurrency, toText, toCurrency, amount, resultValue, calculate"/>

    <TextView
        android:id="@+id/openingText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/choose_currencies"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="UnknownIdInLayout"/>

    <TextView
        android:id="@+id/fromText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/from"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimary"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/openingText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fromCurrency"
        tools:ignore="UnknownIdInLayout"/>

    <Spinner
        android:id="@+id/fromCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        app:layout_constraintStart_toEndOf="@id/fromText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openingText"
        tools:ignore="UnknownIdInLayout"/>

    <ImageView
        android:id="@+id/rotationLogo"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_compare"
        app:layout_constraintTop_toBottomOf="@+id/fromText"
        app:layout_constraintStart_toStartOf="@id/fromCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toCurrency"
        android:rotation="90"
        />

    <TextView
        android:id="@+id/toText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/to"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@+id/rotationLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/toCurrency"
        tools:ignore="UnknownIdInLayout"/>

    <Spinner
        android:id="@+id/toCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintStart_toEndOf="@id/toText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rotationLogo"
        tools:ignore="UnknownIdInLayout"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/toText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/amountValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:hint="@string/amount"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/resultValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Result: 24235.252"/>

    <Button
        android:id="@+id/calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/colorAccent"
        android:background="@drawable/rounded_button_background"
        style="@style/Widget.AppCompat.Button.Colored"/>

</android.support.constraint.ConstraintLayout>